# BSE_ZGS

./: .gitignore  CMakeLists.txt  GIT_PUSH_GUIDE.md  README.md  quick_test.mac  silicon_detector.cc  vis.mac  跑粒子的运行方法
include/: ActionInitialization.hh  BSESensitiveDetector.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
pc_ticurve_analysis/: README.md  plot_ticurve_and_integrate.py  ticurve_integrals.csv
src/: ActionInitialization.cc  BSESensitiveDetector.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
ticurve_analysis/: README.md  ticurve.csv
